# simple-fdtd-cpu-computing

./: .gitignore  .gitmodules  CMakeLists.txt  cst_probe1.txt  cst_probe2.txt  gauss.txt  plot_graphics.py  yee_lattice_1x2x3.ncdl
input/: filename_dims.txt  filename_epsilon_Ex.txt  filename_epsilon_Ey.txt  filename_epsilon_Ez.txt  filename_epsilon_Hx.txt  filename_epsilon_Hy.txt  filename_epsilon_Hz.txt  filename_sigmaE_Ex.txt  filename_sigmaE_Ez.txt  filename_sigmaH_Hx.txt  filename_x_Hy.txt  filename_z_Hx.txt
src/: BerengerPML.hh  BoostUnitsHelpers.hh  Common.hh  Constants.hh  ConvolutionalPML.hh  CurrentSource.hh  Dimensions.hh  PmlShell.hh  calc_field.cc  calc_field.hh  fdtd_field.cc  fdtd_field.hh  fdtd_fields.h  kernels.cl  main.c  main.cc  read_fields.c  read_fields.h  read_grid.c  read_grid.cc  read_grid.h  read_grid.hh  read_values.c  read_values.h  resistive_source.hh  yee_grid.h  yee_grid.hh
test/: test_read_values.c  test_read_values_floats.txt  test_read_values_ints.txt
